fix jumping around logo on phonegap

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -35,7 +35,7 @@ body {
 .startuppic {
   position: absolute;
   left: 0;
-  top: 0;
+  top: -20px;
   width: 100%;
   text-align: center;
 }
